    * 0451 FIX: Ignore missing check types when creating configuration for Nagios
    * 0259 FIX: Fixed htpasswd permission problem in check_mk standalone installation...

    Checks & Agents:
    * 0258 FIX: ps: fixed calculation of virtual/resident memory from windows agents...
    * 0120 FIX: stulz_humidity, apc_humidity: Fixed bug while processing check params...

    WATO:
    * 0434 FIX: Fixed wrong count of failed hosts in bulk inventory mode...


1.2.4b6:
    Checks & Agents:
    * 0321 brocade_mlx: enhancing checks (BR-MLX modules, more OK states)...
    * 0432 FIX: stulz_humidity: Fixed syntax error...

    WATO:
    * 0433 FIX: Creating WATO lock during automations (like e.g. master to slave syncs)...


1.2.4b5:
    Checks & Agents:
    * 0077 cmciii.psm_current, cmciii_psm_plugs, cmciii_io, cmciii.access, cmciii.temp, cmciii.can_current, cmciii.sensor, cmciii.state: new sub checks included in one new check cmcmiii superseding and improving several previous checks of the Rittal CMCIII device...
            NOTE: Please refer to the migration notes!
    * 0116 FIX: cisco_vpn_tunnel: Fixed typo who leads to an exception
    * 0118 FIX: stulz_humidity: Fixed coloring in pnp template...
    * 0119 FIX: stulz_humidity: Fixed lower thresholds...
    * 0255 FIX: windows_agent: now able to handle the removal of local/plugin scripts during runtime...
    * 0447 FIX: fortigate_memory: Fix inventory, do not add check if no info available...
    * 0567 FIX: apc_symmetra: transformation from old tuple to new dict format fixed and improved

    Multisite:
    * 0117 FIX: Availability button is now visible for users without the right to edit views
    * 0431 FIX: LDAP: Fixed group synchronisation when nested group sync is enabled

    WATO:
    * 0256 FIX: wato snapshots: snapshot restore no longer fails with older python versions...


1.2.4b4:
    Core & Setup:
    * 0401 FIX: Fix rule precedence in WATO-configured manual checks...