@@ -8,6 +8,9 @@
     * 0258 FIX: ps: fixed calculation of virtual/resident memory from windows agents...
     * 0120 FIX: stulz_humidity, apc_humidity: Fixed bug while processing check params...
 
+    Multisite:
+    * 0122 FIX: Multisite view editor not longer throwing a exception when loading views from other users
+
     WATO:
     * 0434 FIX: Fixed wrong count of failed hosts in bulk inventory mode...
 
